--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -264,10 +264,10 @@ section {
                     }
                     .html { width: 85%; }
                     .css { width: 80%; }
-                    .js { width: 75%; }
-                    .react{ width: 80%; }
-                    .node{ width: 75%; }
+                    .javascript { width: 75%; }
                     .python{ width: 80%; }
+                    .react{ width: 75%; }
+                    .django{ width: 80%; }
                 }
             }
         }
