--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -704,6 +704,9 @@ section {
   .controls .control {
     margin: 1rem 0.3rem;
   }
+  #about {
+    margin-top: 2rem;
+  }
   .about-container {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -727,16 +730,25 @@ section {
   .about-stats .progress-bars {
     grid-template-columns: repeat(1, 1fr);
   }
+  #portfolio .main-title .bg-text {
+    position: absolute;
+    top: 25%;
+    bottom: -22%;
+  }
   .portfolios {
     grid-template-columns: repeat(1, 1fr);
     padding-bottom: 6rem;
     margin-top: 1rem;
+  }
+  #blogs {
+    margin-top: 2rem;
   }
   .blogs {
     grid-template-columns: repeat(1, 1fr);
     padding-bottom: 6rem;
   }
   .contact-content-con {
+    margin-top: -3.5rem;
     flex-direction: column;
   }
   .contact-content-con .right-contact {
